fix(nlu): fix delete intents / entities on firefox

--- a/modules/nlu/src/views/full/entities/style.scss
+++ b/modules/nlu/src/views/full/entities/style.scss
@@ -60,6 +60,7 @@
 
 .entity {
   display: inline-block;
+  width: 100%;
 }
 
 .selectedentity {
